// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Layout addon panel in right 1`] = `
.emotion-12 {
  background: #F7F7F7 linear-gradient(to bottom right,#EEEEEE,#FFFFFF);
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  font-size: 13px;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.emotion-2 {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-right: 0;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  height: 100%;
  width: 100%;
  overflow: auto;
}

.emotion-4 {
  z-index: 0;
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  position: relative;
  background-color: rgba(255,255,255,0.89);
  border: 1px solid rgba(0,0,0,0.1);
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > * {
  margin: auto;
}

.emotion-8 {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 10px 0 10px 0;
  padding-top: 10px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: absolute;
  width: 100%;
  height: 100%;
  padding: 10px 10px 10px 0;
  box-sizing: border-box;
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-0 emotion-1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  vertical "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
        >
          <div
            class="Pane vertical Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="emotion-8 emotion-9"
            >
              <div
                class="emotion-4 emotion-5"
              />
              <div
                class="emotion-6 emotion-7"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer vertical "
          />
          <div
            class="Pane vertical Pane2  "
            style="flex:none;position:relative;outline:none;width:400px"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout default 1`] = `
.emotion-12 {
  background: #F7F7F7 linear-gradient(to bottom right,#EEEEEE,#FFFFFF);
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  font-size: 13px;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.emotion-2 {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-right: 0;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  height: 100%;
  width: 100%;
  overflow: auto;
}

.emotion-8 {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 10px 10px 0 0;
  padding-top: 10px;
}

.emotion-4 {
  z-index: 0;
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  position: relative;
  background-color: rgba(255,255,255,0.89);
  border: 1px solid rgba(0,0,0,0.1);
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > * {
  margin: auto;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: absolute;
  width: 100%;
  height: 100%;
  padding: 0 10px 10px 0;
  box-sizing: border-box;
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-0 emotion-1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="emotion-8 emotion-9"
            >
              <div
                class="emotion-4 emotion-5"
              />
              <div
                class="emotion-6 emotion-7"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal "
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:200px;display:flex"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout full screen 1`] = `
.emotion-12 {
  background: #F7F7F7 linear-gradient(to bottom right,#EEEEEE,#FFFFFF);
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  font-size: 13px;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  height: 100%;
  width: 100%;
  overflow: auto;
}

.emotion-8 {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 10px 10px 0 0;
  padding-top: 10px;
}

.emotion-4 {
  z-index: 0;
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.emotion-2 {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  display: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-right: 0;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  position: relative;
  background-color: rgba(255,255,255,0.89);
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1;
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-10 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: absolute;
  width: 100%;
  height: 100%;
  padding: 0 10px 10px 0;
  box-sizing: border-box;
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="SplitPane  vertical disabled"
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1px"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-0 emotion-1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical disabled"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal disabled"
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="emotion-8 emotion-9"
            >
              <div
                class="emotion-4 emotion-5"
              />
              <div
                class="emotion-6 emotion-7"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal disabled"
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:1px;display:flex"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout mobile 1`] = `
.emotion-6 {
  background: rgba(255,255,255,1);
  border-bottom: 1px solid rgba(0,0,0,0.1);
  overflow: auto;
  padding: 0 8px;
  white-space: nowrap;
  height: 40px;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 8px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: rgba(0,0,0,0.4);
  border-bottom-color: transparent;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-2 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 8px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: #444;
  border-bottom-color: rgba(0,0,0,0.1);
}

.emotion-2:empty {
  display: none;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  height: 100%;
  width: 100%;
  overflow: auto;
}

.emotion-20 {
  background: #F7F7F7 linear-gradient(to bottom right,#EEEEEE,#FFFFFF);
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  font-size: 13px;
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  overflow: auto;
}

.emotion-8 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  z-index: 9999;
}

.emotion-12 {
  display: none;
}

.emotion-16 {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  height: calc(100vh - 40px);
  width: 100vw;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

<div>
  <div
    class="emotion-20 emotion-21"
  >
    <div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Navigator
          </button>
          <button
            class="emotion-2 emotion-1"
            role="tab"
            type="button"
          >
            Preview
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Addons
          </button>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
      </div>
      <div
        class="emotion-16 emotion-13"
        selected=""
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
          >
            Preview
          </div>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <div
          style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
        >
          Addon
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout no addon panel 1`] = `
.emotion-12 {
  background: #F7F7F7 linear-gradient(to bottom right,#EEEEEE,#FFFFFF);
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  font-size: 13px;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.emotion-2 {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-right: 0;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  height: 100%;
  width: 100%;
  overflow: auto;
}

.emotion-8 {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 10px 10px 0 0;
  padding-top: 10px;
}

.emotion-4 {
  z-index: 0;
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  position: relative;
  background-color: rgba(255,255,255,0.89);
  border: 1px solid rgba(0,0,0,0.1);
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > * {
  margin: auto;
}

.emotion-10 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: absolute;
  width: 100%;
  height: 100%;
  padding: 0 10px 10px 0;
  box-sizing: border-box;
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-0 emotion-1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal disabled"
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="emotion-8 emotion-9"
            >
              <div
                class="emotion-4 emotion-5"
              />
              <div
                class="emotion-6 emotion-7"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal disabled"
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:1px;display:flex"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout no stories panel 1`] = `
.emotion-12 {
  background: #F7F7F7 linear-gradient(to bottom right,#EEEEEE,#FFFFFF);
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  font-size: 13px;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  height: 100%;
  width: 100%;
  overflow: auto;
}

.emotion-8 {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 10px 10px 0 0;
  padding-top: 10px;
}

.emotion-4 {
  z-index: 0;
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  position: relative;
  background-color: rgba(255,255,255,0.89);
  border: 1px solid rgba(0,0,0,0.1);
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > * {
  margin: auto;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: absolute;
  width: 100%;
  height: 100%;
  padding: 0 10px 10px 0;
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  display: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-right: 0;
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="SplitPane  vertical disabled"
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1px"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-0 emotion-1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical disabled"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="emotion-8 emotion-9"
            >
              <div
                class="emotion-4 emotion-5"
              />
              <div
                class="emotion-6 emotion-7"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal "
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:200px;display:flex"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;
